tp3/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: production
#  labels:
 #   app: production
