tp3/pod-blue.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-web-app-blue
  labels:
    app: web
  namespace: production
spec:
  containers:
  - name: webapp-color2
    image: mmumshad/simple-webapp-color
    ports:
    - containerPort: 8080
