tp3/pod-red.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-web-app-red
  labels:
    app: web
  namespace: production
spec:
  containers:
  - name: webapp-color
    image: mmumshad/simple-webapp-color
    ports:
    - containerPort: 8080
