tp3/service-node-web.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport30008
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30008
